# 4LN

./: 4LN.pro  BeforeRelease.hpp  CMakeLists.txt  Changelog.txt  CopyData.cpp  CopyData.hpp  CopyItem.cpp  CopyItem.hpp  Destination.cpp  Destination.hpp  Destination.ui  Docs.qrc  DriveData.cpp  DriveData.hpp  FileData.cpp  FileData.hpp  Global.hpp  ItemContainer.cpp  ItemContainer.hpp  MDC.pro  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Pictures.qrc  Readme.txt  SourceBox.cpp  SourceBox.hpp  TODO.txt  ThreadAnalyze.cpp  ThreadAnalyze.hpp  ThreadClone.cpp  ThreadClone.hpp  WidgetDestination.cpp  WidgetDestination.hpp  WidgetDestination.ui  WidgetDrop.cpp  WidgetDrop.hpp  WidgetDrop.ui  WidgetOverwrite.cpp  WidgetOverwrite.hpp  (+11 more)
Core/: CopyData.cpp  CopyData.hpp  DriveData.cpp  DriveData.hpp  FileData.cpp  FileData.hpp  ThreadAnalyze.cpp  ThreadAnalyze.hpp  ThreadClone.cpp  ThreadClone.hpp
Docs/: Changelog.txt  Readme.txt  TODO.txt
Resources/: Icon.rc  Pictures.qrc
UI/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui  WidgetDestination.cpp  WidgetDestination.hpp  WidgetDrop.cpp  WidgetDrop.hpp  WidgetDrop.ui  WidgetOverwrite.cpp  WidgetOverwrite.hpp  WidgetOverwrite.ui  WindowAnalyze.cpp  WindowAnalyze.hpp  WindowClone.cpp  WindowClone.hpp  WindowClone.ui  WindowDiff.cpp  WindowDiff.hpp  WindowHelp.cpp  WindowHelp.hpp  WindowHelp.ui
